# Folder-ICO

./: .gitignore  main.py  pyproject.toml
app/: __init__.py  app.py
app/config/: config.py
app/exceptions/: __init__.py  render_exceptions.py
app/models/: __init__.py  folder.py  folder_color.py  folder_icon.py
app/service/: __init__.py  folder_service.py  render_service.py
app/utils/: checks.py
app/view/: main_window.py
app/view/bars/: image_edit_bar.py
app/view/components/: __init__.py  draggable_element.py  resizeble_icon.py
app/view/frames/: __init__.py  fluent_frame.py
app/view/scenes/: __init__.py
app/view/scenes/edit/: __init__.py  edit.py
app/view/scenes/edit/presets/: __init__.py  left_editor_panel.py  preview_area.py  right_editor_panel.py
app/view/scenes/settings/: __init__.py  settings.py
app/view/style/: __init__.py  style_sheet.py
configs/: lang.json
resources/: config.json.example
resources/styles/: style_dark.qss  style_light.qss
tests/service/: render_service_tests.py
